--- a/.gitignore
+++ b/.gitignore
@@ -38,3 +38,7 @@ out/
 
 ### Kotlin ###
 .kotlin
+
+# OAuth properties
+src/main/resources/application-oauth.properties
+src/main/resources/application-jwt.properties
