--- a/src/main/resources/application-prod.properties
+++ b/src/main/resources/application-prod.properties
@@ -7,12 +7,12 @@ spring.datasource.password=${PROD_DB_PASSWORD}
 spring.datasource.driver-class-name=org.postgresql.Driver
 
 # JPA/Hibernate Configuration
-spring.jpa.hibernate.ddl-auto=validate
+spring.jpa.hibernate.ddl-auto=${PROD_DDL_AUTO:validate}
 spring.jpa.show-sql=false
 spring.jpa.properties.hibernate.format_sql=false
 spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
 
-# Import external properties (OAuth, JWT)
+# Import external properties
 spring.config.import=optional:application-oauth.properties,optional:application-jwt.properties
 
 # CORS Configuration
